--- a/app/src/main/res/layout/layout_home_joke_list_item.xml
+++ b/app/src/main/res/layout/layout_home_joke_list_item.xml
@@ -3,35 +3,32 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_vertical"
-              android:paddingBottom="8dp"
-              android:paddingLeft="16dp"
-              android:paddingRight="16dp"
-              android:orientation="vertical"
-              android:paddingTop="8dp">
+              android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/avatar"
-            android:src="@mipmap/ic_launcher"
-            android:layout_width="@dimen/list_item_avatar_size"
-            android:layout_height="@dimen/list_item_avatar_size"
-            android:layout_marginRight="16dp"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
-            android:text="第二列表显示点什么呢"
-            android:id="@android:id/text1"
+            android:id="@+id/txt_joke_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="第二列表显示点什么呢"
+            android:textAppearance="?attr/textAppearanceListItem"/>
+
+        <TextView
+            android:id="@+id/txt_joke_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="第二列表显示点什么呢"
             android:textAppearance="?attr/textAppearanceListItem"/>
 
     </LinearLayout>
 
     <View
-        android:paddingTop="8dp"
-        android:background="@android:color/black"
         android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+        android:layout_height="1dp"
+        android:background="@android:color/black"
+        android:paddingTop="8dp"/>
 </LinearLayout>
